--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <script type="text/javascript" src="https://form.jotform.com/jsform/241505497701355"></script>
+            placeholder for form
 
           </div>
 
