--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
 
 
           <div class="col-lg-8 mt-5 mt-lg-0">
-
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdCeKcDTjMNCCk3pa5MBDzCtO2h7r6Fzjm6TlQAV_Ft84AcUw/viewform?embedded=true" width="640" height="1263" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+          Chris is in charge of this bit
 
           </div>
 
