--- a/index.html
+++ b/index.html
@@ -74,15 +74,9 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <p>
-              Date: 9th of January, 2025
-            </p>
-            <p>
-              Location: Trinity Hall, Cambridge
-            </p>
-            <p>
-              Time: 2pm
-            </p>
+
+                <img src="assets/greece.jpg" alt="" class="img-fluid">
+
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
