--- a/index.html
+++ b/index.html
@@ -84,14 +84,15 @@
               the stable home they deserve. 
             </p>
             <p>
-              We're hoping to have a relaxed day celebrating with all of you! We'll have a small ceremony at 2pm, followed by some time for drinks,
-              canapes, and general celebration. Later on we'll be having a wonderful three-course dinner at Trinity Hall, finished with (hopefully!)
-              homemade wedding cake.
+             The dress code is semi-formal, but the most important thing is that you are warm and comfortable (It is January, after all!). 
+              We'll have a small ceremony at 2pm, followed by some time for drinks,
+              canapés, and general celebration. Afterwards we'll be having a wonderful three-course dinner at Trinity Hall, finished with (hopefully!)
+              homemade wedding cake. Everything is on the one site, so no need for travel between venues! 
             </p>
             <p>
-              This is our very small wedding ceremony with only our closest friends and family, as we both prefer it that way. The dress 
-              code is semi-formal, but the most important thing is that you are warm and comfortable. As the wedding is so small, we can
-              only have plus ones that have been invited by name on the invitation. 
+              This is our very small wedding ceremony with only our closest friends and family, as we both prefer it that way. As the wedding is so small, we can
+              only have plus ones that have been invited by name on the invitation. Finally, please don't worry about gifts - we don't want or
+              need anything, your attendance is plenty of a gift!
             </p>
             <p>
               We are hoping to hold a larger party within the next year to celebrate with our wider circle! We really hope that you can make it, 
