--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
               </div>
               
               </div>
+          <div class="form-group mt-3">
+                <textarea class="form-control" name="message" rows="5" placeholder="Additional message?" ></textarea>
+              </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
