--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="section-title">
           <h3>Hello! Welcome to our wedding website!</h3>
-          <a href="#about" class="btn-get-started scrollto">RSVP</a>
+          <a href="#RSVP" class="btn-get-started scrollto">RSVP</a>
         </div>
         <div class="row content">
           <div class="col-lg-6">
